--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.2.9",
     "react": "^18",
     "react-dom": "^18",
+    "react-responsive": "^10.0.0",
     "three": "^0.168.0",
     "three-stdlib": "^2.32.2"
   },
