--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/fiber": "^8.17.7",
     "@react-three/postprocessing": "^2.16.7",
     "framer-motion": "^11.5.4",
+    "framer-motion-3d": "^12.4.7",
     "lamina": "^1.1.23",
     "lucide-react": "^0.439.0",
     "next": "14.2.9",
